--- a/dev/html/culturetv/mainList.pug
+++ b/dev/html/culturetv/mainList.pug
@@ -7,119 +7,147 @@ block contents
     #container.pageClassSub
         #content(role='main')
             .content-inner
-                section.visual-top.line-gray
-                        .section-inner
-                            .visual-area.type-row
-                                .visual-content-box
-                                    .video
-                                        a.link-content-list(href="#" title="")
-                                            img.link-img(src="../../images/link_img_sample.jpg", alt="")
-                                            i.ico-play(aria-hidden="true") 
-                                    .visual-text-box
-                                        strong.category 문화유산
-                                        h3.title-h3 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
-                                        p.sub-txt.ellipsis.type02 [기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
+                section.main-top.line-gray
+                    .section-full-inner
+                        .visual-area.type-main
+                            .visual-content-box
+                                .video
+                                    a.link-content-list(href="#" title="")
+                                        img.link-img(src="../../images/link_img_sample.jpg", alt="")
+                                        i.ico-play(aria-hidden="true") 
+                                .visual-text-box
+                                    ul.thumb-tag.size02
+                                        li.tag
+                                            span.txt 문화유산
+                                    h3.title-h3 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
+                                    p.sub-txt.ellipsis.type02 [기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
 
-                                .thumbnail-area.swiper-container
-                                    ul.thumbnail-list.swiper-wrapper
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링2
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링3
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링6
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링3
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링2
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링7
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
-                                        li.swiper-slide
-                                            a(href="" role="button")
-                                                .thumb-img
-                                                    img(src="../../images/thumb_img.png", alt="")
-                                            .thumb-text
-                                                strong.sub-category 공연/전시
-                                                p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
-                                    .swiper-button-area
-                                        .swiper-button-prev
-                                        .swiper-button-next
-                                        .swiper-pagination
+                            .thumbnail-area.swiper-container
+                                ul.thumbnail-list.swiper-wrapper
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링2
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링3
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링6
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링3
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링2
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링7
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링4
+                                    li.swiper-slide
+                                        a(href="" role="button")
+                                            .thumb-img
+                                                img(src="../../images/thumb_img.png", alt="")
+                                        .thumb-text
+                                            ul.thumb-tag
+                                                li.tag
+                                                    span.txt 공연/전시
+                                            p.txt.ellipsis.type03 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링5
+                                .swiper-button-area
+                                    .swiper-button-prev
+                                    .swiper-button-next
+                                    .swiper-pagination
 
                 section.slide-contents
-                    .section-inner
+                    .section-full-inner
                         h4.title-h4
                             a(href="#") 문화영상
                                 i.ico(aria-hidden="true")
@@ -216,7 +244,7 @@ block contents
                                 .swiper-pagination
                             .swiper-progress
                 section.slide-contents
-                    .section-inner
+                    .section-full-inner
                         h4.title-h4
                             a(href="#") 유네스코 문화유산
                                 i.ico(aria-hidden="true")
@@ -396,7 +424,7 @@ block contents
                                 .swiper-pagination
                             .swiper-progress
                 section.slide-contents
-                    .section-inner
+                    .section-full-inner
                         h4.title-h4
                             a(href="#") 한국문화 100
                                 i.ico(aria-hidden="true")
@@ -576,7 +604,7 @@ block contents
                                 .swiper-pagination
                             .swiper-progress
                 section.slide-contents
-                    .section-inner
+                    .section-full-inner
                         h4.title-h4
                             a(href="#") 문화인터뷰
                                 i.ico(aria-hidden="true")
@@ -756,7 +784,7 @@ block contents
                                 .swiper-pagination
                             .swiper-progress
                 section.slide-contents
-                    .section-inner
+                    .section-full-inner
                         h4.title-h4
                             a(href="#") 기관별 영상
                                 i.ico(aria-hidden="true")
@@ -943,7 +971,7 @@ block append script
         let defaults = {
             slidesPerView:2,
             slidesPerGroup :2,
-            spaceBetween:20,
+            spaceBetween:10,
             watchOverflow:true,
             loopFillGroupWithBlank : true,
             breakpoints: {
