--- a/dev/html/culturetv/themeList.pug
+++ b/dev/html/culturetv/themeList.pug
@@ -97,7 +97,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -106,7 +106,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -115,7 +115,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -124,7 +124,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -133,7 +133,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -142,7 +142,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -151,7 +151,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -160,7 +160,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -169,7 +169,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -178,7 +178,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -187,7 +187,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             li.list
                                 a(href="#none").box-thumb
                                         .thumb-img
@@ -196,7 +196,7 @@ block contents
                                         .thumb-txt
                                             p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
                                             p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
-                                            p.txt.size02 문화포털
+                                            p.txt.size02.mont 2022.11.11
                             
                         .area-pagenation
                             button.btn-first(type="button")
