--- a/dev/html/oneeye/oneEyeList.pug
+++ b/dev/html/oneeye/oneEyeList.pug
@@ -45,43 +45,43 @@ block contents
                                                 .item
                                                     input#filterItem01-01(type="checkbox")
                                                     label.filter-label(for='filterItem01-01')
-                                                        .circle-item(area-hidden="true")
+                                                        .circle-item.ico-category01(area-hidden="true")
                                                         span.txt 문화예술
                                             li.list
                                                 .item
                                                     input#filterItem01-02(type="checkbox")
                                                     label.filter-label(for='filterItem01-02')
-                                                        .circle-item(area-hidden="true")
+                                                        .circle-item.ico-category02(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem01-02(type="checkbox")
-                                                    label.filter-label(for='filterItem01-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem01-03(type="checkbox")
+                                                    label.filter-label(for='filterItem01-03')
+                                                        .circle-item.ico-category03(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem01-02(type="checkbox")
-                                                    label.filter-label(for='filterItem01-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem01-04(type="checkbox")
+                                                    label.filter-label(for='filterItem01-04')
+                                                        .circle-item.ico-category04(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem01-02(type="checkbox")
-                                                    label.filter-label(for='filterItem01-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem01-05(type="checkbox")
+                                                    label.filter-label(for='filterItem01-05')
+                                                        .circle-item.ico-category05(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem01-02(type="checkbox")
-                                                    label.filter-label(for='filterItem01-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem01-06(type="checkbox")
+                                                    label.filter-label(for='filterItem01-06')
+                                                        .circle-item.ico-category06(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem01-02(type="checkbox")
-                                                    label.filter-label(for='filterItem01-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem01-07(type="checkbox")
+                                                    label.filter-label(for='filterItem01-07')
+                                                        .circle-item.ico-category07(area-hidden="true")
                                                         span.txt 문화유산
                                     .search-category
                                         .search-head
@@ -93,67 +93,67 @@ block contents
                                                 .item
                                                     input#filterItem02-01(type="checkbox" checked)
                                                     label.filter-label(for='filterItem02-01')
-                                                        .circle-item(area-hidden="true")
+                                                        .circle-item.ico-category08(area-hidden="true")
                                                         span.txt 도서
                                             li.list
                                                 .item
                                                     input#filterItem02-02(type="checkbox")
                                                     label.filter-label(for='filterItem02-02')
-                                                        .circle-item(area-hidden="true")
+                                                        .circle-item.ico-category09(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem02-02(type="checkbox")
-                                                    label.filter-label(for='filterItem02-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem02-03(type="checkbox")
+                                                    label.filter-label(for='filterItem02-03')
+                                                        .circle-item.ico-category10(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem02-02(type="checkbox")
-                                                    label.filter-label(for='filterItem02-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem02-04(type="checkbox")
+                                                    label.filter-label(for='filterItem02-04')
+                                                        .circle-item.ico-category11(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem02-02(type="checkbox")
-                                                    label.filter-label(for='filterItem02-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem02-05(type="checkbox")
+                                                    label.filter-label(for='filterItem02-05')
+                                                        .circle-item.ico-category12(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem02-02(type="checkbox")
-                                                    label.filter-label(for='filterItem02-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem02-06(type="checkbox")
+                                                    label.filter-label(for='filterItem02-06')
+                                                        .circle-item.ico-category13(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem02-02(type="checkbox")
-                                                    label.filter-label(for='filterItem02-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem02-07(type="checkbox")
+                                                    label.filter-label(for='filterItem02-07')
+                                                        .circle-item.ico-category14(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem02-02(type="checkbox")
-                                                    label.filter-label(for='filterItem02-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem02-08(type="checkbox")
+                                                    label.filter-label(for='filterItem02-08')
+                                                        .circle-item.ico-category15(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem02-02(type="checkbox")
-                                                    label.filter-label(for='filterItem02-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem02-09(type="checkbox")
+                                                    label.filter-label(for='filterItem02-09')
+                                                        .circle-item.ico-category16(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem02-02(type="checkbox")
-                                                    label.filter-label(for='filterItem02-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem02-10(type="checkbox")
+                                                    label.filter-label(for='filterItem02-10')
+                                                        .circle-item.ico-category17(area-hidden="true")
                                                         span.txt 문화유산
                                             li.list
                                                 .item
-                                                    input#filterItem02-02(type="checkbox")
-                                                    label.filter-label(for='filterItem02-02')
-                                                        .circle-item(area-hidden="true")
+                                                    input#filterItem02-11(type="checkbox")
+                                                    label.filter-label(for='filterItem02-11')
+                                                        .circle-item.ico-category18(area-hidden="true")
                                                         span.txt 문화유산
                                     .search-category
                                         .search-head
@@ -165,7 +165,7 @@ block contents
                                                 .item
                                                     input#filterItem03-01(type="checkbox")
                                                     label.filter-label(for='filterItem03-01')
-                                                        .circle-item(area-hidden="true")
+                                                        .circle-item.ico-category19(area-hidden="true")
                                                         span.txt 연령별
                                                 .sub-list
                                                     .sub-item 
@@ -188,7 +188,7 @@ block contents
                                                 .item
                                                     input#filterItem03-02(type="checkbox")
                                                     label.filter-label(for='filterItem03-02')
-                                                        .circle-item(area-hidden="true")
+                                                        .circle-item.ico-category20(area-hidden="true")
                                                         span.txt 다양성
                                                 .sub-list
                                                     .sub-item 
@@ -207,7 +207,7 @@ block contents
                                                 .item
                                                     input#filterItem03-03(type="checkbox")
                                                     label.filter-label(for='filterItem03-03')
-                                                        .circle-item(area-hidden="true")
+                                                        .circle-item.ico-category21(area-hidden="true")
                                                         span.txt 직업
                                                 .sub-list
                                                     .sub-item 
