--- a/dev/html/culturetv/videoListDetail.pug
+++ b/dev/html/culturetv/videoListDetail.pug
@@ -39,10 +39,10 @@ block contents
                                         img.link-img(src="https://picsum.photos/840/472", alt="")
                                         i.ico-play(aria-hidden="true") 
                             .visual-text-box
-                                ul.visual-category
-                                    li
+                                ul.thumb-tag.size02
+                                    li.tag
                                         span.txt 문화예술
-                                    li
+                                    li.tag.reverse
                                         span.txt 서울
                                 h3.title-h3 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
                                 ul.hashtag
